--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -27,6 +27,9 @@
         "@ionic/app-scripts": "^3.2.3",
         "bootstrap4-notify": "^4.0.3",
         "laravel-echo": "^1.5.3",
-        "pusher-js": "^4.4.0"
+        "laravel-echo-server": "^1.5.0",
+        "pusher-js": "^4.4.0",
+        "socket.io-client": "^2.2.0",
+        "vuex": "^3.1.0"
     }
 }
